--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,6 +100,7 @@
 	-->
 </head>
 <body>
+
 	<ul id="menu" class="ui-menu">
 		<li data-menuanchor="page1" class="active"><a href="#page1">
 			<div class="langFR">Faire-Part</div>
@@ -129,6 +130,7 @@
 		<li id="selectEN" class="selectLanguageItem label label-default hide" style="cursor:pointer">English</li>
 	</ul>
 
+	
 <div id="fullpage">
 	<div class="section active" id="section1">
 		<div class="container-fluid">
@@ -408,24 +410,19 @@
 		<div class="slide" id="slide_mairie">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-md-12">
-						<h1 class="langFR">
-							Cérémonie dans l'hotel de ville
-						</h1>
-						<h1 class="langZH">
-							Castres政府大厅仪式
-						</h1>
-						<br>
+					
+					<div class="col-md-4">
+						<img src="mairie.jpg" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-4">
-						<img src="mairie.png" class="img-rounded img-responsive">
+						<img src="fond_letter.png" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-4">
-						<p class="langZH"><strong>地址：</strong> 1 Rue de l'Hôtel de ville, 81100 Castres</p>
-						<p class="langFR"><strong>Adresse：</strong> 1 Rue de l'Hôtel de ville, 81100 Castres</p>
-						<p class="langZH"><strong>时间：</strong> 15点</p>
-						<p class="langFR"><strong>Heure：</strong> 15h00</p>
+						<img src="parking.jpg" class="img-rounded img-responsive">
 					</div>
+					
+					
+				
 				
 				</div>
 			</div>
