--- a/views/index.ejs
+++ b/views/index.ejs
@@ -414,8 +414,11 @@
 					<div class="col-md-4">
 						<img src="mairie.jpg" class="img-rounded img-responsive">
 					</div>
-					<div class="col-md-4">
-						<img src="fond_letter.png" class="img-rounded img-responsive">
+					<div class="col-md-4 langZH">
+						<img src="fond_letter_cn.png" class="img-rounded img-responsive">
+					</div>
+					<div class="col-md-4 langFR">
+						<img src="fond_letter_fr.png" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-4">
 						<img src="parking.jpg" class="img-rounded img-responsive">
@@ -445,7 +448,7 @@
 						<p class="langFR"><strong>Heure：</strong> 16h00</p>
 						<img src="darty.png" class="img-rounded img-responsive">
 					</div>
-					<div class="col-md-8">
+					<div class="col-md-6">
 						<h2 class="langFR">Liste des Cadeaux</h2>
 						<h2 class="langZH">礼物清单</h2>
 						<table class="table table-striped table-bordered">
