--- a/views/index.ejs
+++ b/views/index.ejs
@@ -433,25 +433,22 @@
 		<div class="slide" id="slide_cadeaux">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-md-12">
-						<h1 class="langFR">
-							Achat des cadeaux chez Darty
-						</h1>
-						<h1 class="langZH">
-							去Darty购买礼物
-						</h1>
-					</div>
-					<div class="col-md-4">
-						<p class="langZH"><strong>地址：</strong> 12 Rue Albert Calmettes, 81100 Castres</p>
-						<p class="langFR"><strong>Adresse：</strong> 12 Rue Albert Calmettes, 81100 Castres</p>
-						<p class="langZH"><strong>时间：</strong> 16点</p>
-						<p class="langFR"><strong>Heure：</strong> 16h00</p>
+				
+					<div class="col-md-3">
 						<img src="darty.png" class="img-rounded img-responsive">
 					</div>
+					
+					<div class="col-md-3 langZH">
+						<img src="darty_cn.png" class="img-rounded img-responsive">
+					</div>
+					<div class="col-md-3 langFR">
+						<img src="darty_fr.png" class="img-rounded img-responsive">
+					</div>
+					
 					<div class="col-md-6">
 						<h2 class="langFR">Liste des Cadeaux</h2>
 						<h2 class="langZH">礼物清单</h2>
-						<table class="table table-striped table-bordered">
+						<table class="table " id="giftable">
 							<thead>
 								<tr>
 									<th class="langFR">Cadeaux</th>
@@ -480,24 +477,16 @@
 		<div class="slide" id="slide_dinner">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-md-12">
-						<h1 class="langFR">
-							Le repas et la soirée dans le Château de la Vère
-						</h1>
-						<h1 class="langZH">
-							城堡晚宴及晚会
-						</h1>
-						<br>
-					</div>
+				
 					
-					<div class="col-md-4">
+					<div class="col-md-5">
 						<img src="chateau.jpg" class="img-rounded img-responsive">
 					</div>
-					<div class="col-md-4">
-						<p class="langZH"><strong>地址：</strong> 北纬 44.0040706, 东经 1.7122476</p>
-						<p class="langFR"><strong>Adresse：</strong> 44.0040706 N, 1.7122476 E</p>
-						<p class="langZH"><strong>时间：</strong> 18点</p>
-						<p class="langFR"><strong>Heure：</strong> 18h00</p>
+					<div class="col-md-4 col-md-offset-2 langZH">
+						<img src="reception_cn.png" class="img-rounded img-responsive">
+					</div>
+					<div class="col-md-4 col-md-offset-2 langFR">
+						<img src="reception_fr.png" class="img-rounded img-responsive">
 					</div>
 					
 					
@@ -508,22 +497,12 @@
 		<div class="slide" id="slide_barbecue">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-md-12">
-						<h1 class="langFR">
-							Le Barbecue dans le jardin
-						</h1>
-						<h1 class="langZH">
-							花园烧烤
-						</h1>
-						<br>
+			
+					<div class="col-md-4 col-md-offset-4 langZH">
+						<img src="reception2_cn.png" class="img-rounded img-responsive">
 					</div>
-					<div class="col-md-4">
-						<p class="langZH"><strong>时间：</strong> 翌日11点</p>
-						<p class="langFR"><strong>Heure：</strong> Dimanche le 3 mai à 11h00 </p>
-					</div>
-					
-					<div class="col-md-4">
-						
+					<div class="col-md-4 col-md-offset-4 langFR">
+						<img src="reception2_fr.png" class="img-rounded img-responsive">
 					</div>
 				</div>
 			</div>
