--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
 				sectionsColor: ['#1bbc9b', '#4BBFC3', '#7BAABE', '#1bbc9b'],
-				anchors: ['page1', 'page2', 'page3', 'page4'],
+				anchors: ['faire-part', 'nous', 'notrechemin', 'programme'],
 				menu: '#menu',
 				css3: true,
 				scrollingSpeed: 1000,
@@ -75,6 +75,7 @@
         		});
         });
     </script>
+
     <!-- no need google map now.
 	<script type="text/javascript">
 		var centerPos=new google.maps.LatLng(44.0147149,1.588451);
@@ -102,22 +103,22 @@
 <body>
 
 	<ul id="menu" class="ui-menu">
-		<li data-menuanchor="page1" class="active"><a href="#page1">
+		<li data-menuanchor="faire-part" class="active"><a href="#faire-part">
 			<div class="langFR">Faire-Part</div>
 			<div class="langZH">公告</div>
 			<div class="langEN">Announce</div>
 		</a></li>
-		<li data-menuanchor="page2"><a href="#page2">
+		<li data-menuanchor="nous"><a href="#nous">
 			<div class="langFR">Toi et Moi</div>
 			<div class="langZH">妳和我</div>
 			<div class="langEN">You & Me</div>
 		</a></li>
-		<li data-menuanchor="page3"><a href="#page3">
+		<li data-menuanchor="notrechemin"><a href="#notrechemin">
 			<div class="langFR">Chemin d'amour</div>
 			<div class="langZH">爱的里程</div>
-			<div class="langEN">Way of Love</div>
+			<div class="langEN">Love Road</div>
 		</a></li>
-		<li data-menuanchor="page4"><a href="#page4">
+		<li data-menuanchor="programme"><a href="#programme">
 			<div class="langFR">Programme</div>
 			<div class="langZH">婚礼安排</div>
 			<div class="langEN">Schedule</div>
@@ -259,7 +260,7 @@
 						<img src="canvas_jing.jpg" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-4">
-						<img src="xuhui.jpg" class="img-rounded img-responsive">
+						<img src="shjob.jpg" class="img-rounded img-responsive">
 					</div>
 					<div class="col-md-4">
 						<p class="langFR">
@@ -404,9 +405,11 @@
 			<div class="container-fluid">
 				<div class="row">
 					
-					<div class="col-md-4">
+					<div class="col-md-4" >
 						<img src="mairie.jpg" class="img-rounded img-responsive">
 					</div>
+	
+
 					<div class="col-md-4 langZH">
 						<img src="fond_letter_cn.png" class="img-rounded img-responsive">
 					</div>
@@ -502,9 +505,10 @@
 		</div>
 	</div>
 </div>
-<div class="navbar navbar-fixed-bottom col-md-3 col-md-offset-9">
-	<h5>Designed by: Mr.&Mrs. Zhanguo.</h5>
-	<h5>Powered by: node.js, mongoDB, Openshift, JQuery, Bootstrap</h5>
+<div class="navbar navbar-fixed-bottom col-md-4 col-md-offset-8">
+	<h5>Designed by Zhanguo</h5>
+	<h5>Powered by node.js, mongoDB, Openshift, Bootstrap</h5>
+	<h5>Copyright © 2015 Zhanguo</h5> 
 </div>
 
 <audio autoplay="true" loop="true">
