--- a/public/stylesheets/mariage.css
+++ b/public/stylesheets/mariage.css
@@ -12,8 +12,9 @@ body{
 	color: rgba(0,0,0,0.5);
 }
 h1{
-	font-size: 3em;
-	color:white;
+	font-size: 5em;
+	color:#EE7621;
+	
 }
 h2{
 	font-size: 2.5em;
