--- a/views/index.ejs
+++ b/views/index.ejs
@@ -75,6 +75,22 @@
         		});
         });
     </script>
+	<script>
+// Using multiple unit types within one animation.
+ 
+$( document ).ready(function() {
+  $( "#block" ).animate({
+    width: "70%",
+    marginLeft: "2in",
+    fontSize: "20px",
+    borderWidth: "10px"
+  }, 800 );
+
+ });
+
+
+</script>
+
 
     <!-- no need google map now.
 	<script type="text/javascript">
@@ -103,7 +119,7 @@
 <body>
 
 	<ul id="menu" class="ui-menu">
-		<li data-menuanchor="faire-part" class="active"><a href="#faire-part">
+		<li data-menuanchor="faire-part" class="active" ><a href="#faire-part">
 			<div class="langFR">Faire-Part</div>
 			<div class="langZH">公告</div>
 			<div class="langEN">Announce</div>
@@ -136,7 +152,7 @@
 	<div class="section active" id="section1">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-12" id="block">
 					<h1 class="langFR">Nous allons nous marier！</h1>
 					<h1 class="langZH">我们要结婚啦！</h1>
 					<h1 class="langEN">We are getting married！</h1>
@@ -202,7 +218,7 @@
 	<div class="section" id="section2">
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-5 col-md-offset-1">
+				<div class="col-md-5 col-md-offset-1" id="#testslide">
 				
 					<img src="jingPortait.png" class="img-circle">
 					<h4 class="langFR">
