--- a/views/invitation.ejs
+++ b/views/invitation.ejs
@@ -112,7 +112,7 @@
 							</p>
 						</div>
 						<div class="col-md-12 pull-right">
-							<a class="btn btn-info" href="/" target="_blank" role="button">
+							<a class="btn btn-info" href="/?lang=<%= invitee.lang %>" target="_blank" role="button">
 								<h3 class="langZH">欣赏我们的宣传页</h3>
 								<h3 class="langFR">Regardez notre annonce</h3>
 							</a>
