--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
 		$(document).ready(function() {
 			var langBtns = ['selectZH', 'selectFR','selectEN'];
 			var langClasses = ['langZH', 'langFR', 'langEN'];
-			var langTitles = ['静浩之恋', 'Caesar&Serene','Jing and Hao'];
+			var langTitles = ['Caesar&Serene', 'Caesar&Serene','Jing and Hao'];
 			function selectLanguage(selectLang){
 				
 				$('#'+selectLang).show();
@@ -93,11 +93,11 @@
  
 $( document ).ready(function() {
   $( "#block" ).animate({
-    width: "70%",
-    marginLeft: "2in",
-    fontSize: "20px",
+    width: "90%",
+    marginLeft: "1.5in",
+    fontSize: "18px",
     borderWidth: "10px"
-  }, 800 );
+  }, 1516 );
 
  });
 
@@ -234,6 +234,7 @@ $( document ).ready(function() {
 				<div class="col-md-5 col-md-offset-1" id="#testslide">
 				
 					<img src="jingPortait.png" class="img-circle">
+					<br><br><br>
 					<h4 class="langFR">
 						Jing vient de Province de Hebei, Handan. Elle est dotée un prénom qui signfie "calme" en chinois mais elle adore bouger et les sports.
 					</h4>
@@ -247,6 +248,7 @@ $( document ).ready(function() {
 				<div class="col-md-5">
 				
 					<img src="haoPortait.png" class="img-circle">
+					<br><br><br>
 					<h4 class="langFR">
 						Hao vient de Province de Shandong, Guangrao. Il était trempé dans l'ambiance de Confucius et est fort en le changement du "calme" au "mouvement"
 					</h4>
@@ -272,10 +274,10 @@ $( document ).ready(function() {
 				
 					<div class="col-md-6">
 						<p class="langFR">
-							Nous sommes entrés dans la même université ensemble en 2005. Là, derrière le grand portail à la forme 'Tong' de l'Université Jiao Tong de Shanghai, je te connais. Comme toujours j'assis au fond de la salle avec mes copains, bâillai, et toi toujours près de l'estrade.
+							Nous sommes entrés dans la même université en 2005. Là, derrière le grand portail à la forme 'Tong' de l'Université Jiao Tong de Shanghai, Hao est remarqué Jing. Comme toujours Hao assit au fond de la salle avec ses copains, bâillait, et JIng toujours près de l'estrade.
 						</p>
 						<p class="langZH">
-							2005年，我们一起踏入交大的校门，记忆中是那个大大的拖鞋还有那只展翅欲飞的雄鹰，还有那走不完的闵大荒。跟小伙伴们一起坐在最后一排打瞌睡的我，认识了永远坐在第一排的妳。我们都记得你的名字--“学霸”。妳也记得我们的名字：技术宅男。
+							2005年，我们一起踏入交大的校门，记忆中是那个大大的拖鞋还有那只展翅欲飞的雄鹰，还有那走不完的闵大荒。跟小伙伴们一起坐在最后一排打瞌睡的张同学，认识了永远坐在第一排的郭同学（后注：这不是真的哇！）。我们都记得你的名字：学霸。你们也记得我们的名字：技术宅男。
 						</p>
 						
 					</div>
@@ -293,10 +295,10 @@ $( document ).ready(function() {
 					</div>
 					<div class="col-md-4">
 						<p class="langFR">
-							L'année 2009. Tu te profitais en France, et sentait la tranquillité à Douai. J'ai commencé mon prémière boulot, et appris de l'expérience de la passion, de l'éspoir, du désespoir et de la mélancolie. 
+							L'année 2009. Jing se profitais en France, et sentait la tranquillité à Douai. Hao a commencé son premier travail, et apprit de l'expérience de la passion, de l'éspoir, du désespoir et de la mélancolie. 
 						</p>
 						<p class="langZH">
-							2009年，妳跟小伙伴们在法国欢声笑语，感受着杜埃的那份宁静与快乐。我踌躇满志踏上了人生第一段职业历程，体会了激情，希望，伤心与失落。
+							2009年，Jing跟小伙伴们在法国欢声笑语，感受着杜埃的那份宁静与快乐。 Hao踌躇满志踏上了人生第一段职业历程，体会了激情，希望，伤心与失落。
 						</p>
 						
 					</div>
@@ -311,10 +313,10 @@ $( document ).ready(function() {
 					</div>
 					<div class="col-md-6">
 						<p class="langFR">
-							L'année 2011. Tu es revenue à SJTU pour poursuivre tes études, et je courais après mon ancien rêve. Nous nous sommes retrouvés et nous avons gardé le nom de l'un et l'autre. J'ai pris mon plus grand courage pour prendre ta main dans la mienne, en poursuivant notre rêve. Chaque week-end on s'était retrouvé à SJTU dans ton labo, jouait matlab, regardait 'Mentalist' et 'Nikita', et préparait l'examen de GEM.
+							L'année 2011. Jing est revenue à SJTU pour poursuivre ses études, et Hao a couru après son ancien rêve. Nous nous sommes retrouvés et nous avons gardé le vrai nom de l'un et l'autre. Hao a pris son plus grand courage pour prendre la main de Jing dans la sienne, en poursuivant leur rêve. Chaque week-end ils s'étaient retrouvés à SJTU dans le labo, jouaient matlab, regardaient 'Mentalist' et 'Nikita', et Hao préparait l'examen de GEM.
 						</p>
 						<p class="langZH">
-							2011年，妳回到了交大，我也回到了交大。妳继续妳的学业，我去寻找我曾经的梦想。我们再一次认识对方，拥有了彼此真正的名字。我鼓起勇气，拉起妳的手，一起踏上追梦的路程。每个周末陪着妳玩Matlab，看美剧，吃食堂，准备GEM考试。
+							2011年，Jing回到了交大，Hao也回到了交大。Jing继续她的学业，Hao去寻找他曾经的梦想。我们再一次认识对方，拥有了彼此真正的名字。我鼓起勇气，拉起你的手，一起踏上追梦的路程。每个周末陪着你玩Matlab，看美剧，吃食堂，准备GEM考试。
 						</p>
 						
 					</div>
@@ -329,10 +331,10 @@ $( document ).ready(function() {
 					</div>
 					<div class="col-md-6">
 						<p class="langFR">
-							Enfin, diplomé! En 2012, t'avais réçu tes 3 diplomes et t'étais plus diplomé que de lycéé. 
+							Enfin, Jing est diplomé! En 2012, elle a réçu ses 3 diplomes et était plus diplomé que de lycéé. 
 						</p>
 						<p class="langZH">
-							2012年，陪伴妳坐在思源湖边，一起毕业。
+							2012年，陪伴你坐在思源湖边，一起毕业。
 						</p>
 						
 					</div>
@@ -348,7 +350,7 @@ $( document ).ready(function() {
 					</div>
 					<div class="col-md-6">
 						<p class="langFR">
-							Octobre 2012, après tous les revers sinueux que j'ai l'habitude, on a réussi de se rencontre à Paris! Nous avons voyagé tous les petits et les grands rues en Europe.
+							Octobre 2012, après tous les revers sinueux que Hao a l'habitude, nous avons réussi de se rencontrer à Paris! Nous avons decouvert les petits et les grands rues partout en Europe.
 						</p>
 						<p class="langZH">
 							2012年10月，经历过无数让我习以为常的波折后，我们成功在巴黎会师啦。我们一起行走欧洲，温暖的气氛在周围荡漾。
@@ -379,18 +381,18 @@ $( document ).ready(function() {
 				</div>
 				<div class="col-md-6">
 					<p class="langFR">
-						J'ai commencé mon stage à Toulouse en juin 2013. Je faisais voyage en ter pour aller à l'entreprise afin de te voir chaque jour.
+						Hao a commencé son stage à Toulouse en juin 2013. Il faisait le voyage en TER pour aller à l'entreprise afin qu'il puisse voir Jing chaque jour.
 					</p>
 					<p class="langFR">
-						En plein milieu d'un lac,je t'ai demandé en mariage! Un moment inoubliable.
+						En plein milieu d'un lac, Hao a demandé en mariage à Jing! Un moment inoubliable.
 					</p>
 					<p class="langZH">
-						2013年6月，我开始在图鲁兹实习，我每天坐着火车奔波于两个城市间，为了每天都能回家见到妳。
+						2013年6月，Hao开始在图鲁兹实习，每天坐着火车奔波于两个城市间，为了每天都能回家见到Jing。
 					</p>
 					<p class="langFR">
 					</p>
 					<p class="langZH">
-						在一个阳光明媚的午后，我向你求婚了。波光粼粼的湖上，我们相视冁然而笑。
+						在一个阳光明媚的午后，Hao求婚了。波光粼粼的湖上，我们相视冁然而笑。
 					</p>
 				</div>
 			</div>
@@ -400,10 +402,10 @@ $( document ).ready(function() {
 			
 				<div class="col-md-6 col-md-offset-1">
 					<p class="langFR">
-						Bientôt, dans cette petite ville avec sa façon de la charme, moi et toi, on va entrer dans notre vie de couple en mariage.
+						Bientôt, dans cette petite ville charmante, Zhang Hao et Guo Jing vont entrer dans leur vie de couple en mariage.
 					</p>
 					<h6 class="langZH">
-						马上，在这座安静而美丽的小城，我将拉着你的手进入婚姻殿堂。					
+						马上，在这座安静而美丽的小城，我们将牵手进入婚姻殿堂。					
 					</h6>
 				</div>
 			</div>
