modification of pics size

--- a/public/stylesheets/mariage.css
+++ b/public/stylesheets/mariage.css
@@ -182,7 +182,7 @@ th{
     background-size: 100% 100%;
 }
 #slide8{
-	background-image: url("fond_matin.jpg");
+	background-image: url("fond_matin_sm.jpg");
 	background-repeat: no-repeat;
     background-size: 100% 100%;
 }
