modification of font

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -235,28 +235,28 @@ $( document ).ready(function() {
 				
 					<img src="jingPortait.png" class="img-circle">
 					<br><br><br><br><br><br>
-					<h4 class="langFR">
+					<p class="langFR">
 						Jing vient de Province de Hebei, Handan. Elle est dotée un prénom qui signfie "calme" en chinois mais elle adore bouger et les sports.
-					</h4>
-					<h4 class="langZH">
+					</p>
+					<p class="langZH">
 					<strong>
 						静，燕赵人士，曰静而喜动，喜欢小动物，伶俐而亲切。
 					</strong>
-					</h4>
+					</p>
 					
 				</div>
 				<div class="col-md-5">
 				
 					<img src="haoPortait.png" class="img-circle">
 					<br><br><br><br><br><br>
-					<h4 class="langFR">
+					<p class="langFR">
 						Hao vient de Province de Shandong, Guangrao. Il était trempé dans l'ambiance de Confucius et est fort en le changement du "calme" au "mouvement"
-					</h4>
-					<h4 class="langZH">
+					</p>
+					<p class="langZH">
 					<strong>
 						浩，齐鲁人士，尊儒重道，喜欢散文那行云流水般的惬意，擅长变静为动。
 					</strong>
-					</h4>
+					</p>
 					
 				</div>
 				
@@ -274,7 +274,7 @@ $( document ).ready(function() {
 				
 					<div class="col-md-6">
 						<p class="langFR">
-							Nous sommes entrés dans la même université en 2005. Là, derrière le grand portail à la forme 'Tong' de l'Université Jiao Tong de Shanghai, Hao est remarqué Jing. Comme toujours Hao assit au fond de la salle avec ses copains, bâillait, et JIng toujours près de l'estrade.
+							Nous sommes entrés dans la même université en 2005. Là, derrière le grand portail à la forme 'Tong' de l'Université Jiao Tong de Shanghai de campus Minhang, Hao est remarqué Jing. Comme toujours Hao assit au fond de la salle avec ses copains, bâillait, et alors que Jing était toujours près de l'estrade (nb par Jing: "c'est pas tout vrai").
 						</p>
 						<p class="langZH">
 							2005年，我们一起踏入交大的校门，记忆中是那个大大的拖鞋还有那只展翅欲飞的雄鹰，还有那走不完的闵大荒。跟小伙伴们一起坐在最后一排打瞌睡的张同学，认识了永远坐在第一排的郭同学（后注：这不是真的哇！）。我们都记得你的名字：学霸。你们也记得我们的名字：技术宅男。
@@ -313,11 +313,15 @@ $( document ).ready(function() {
 					</div>
 					<div class="col-md-6">
 						<p class="langFR">
-							L'année 2011. Jing est revenue à SJTU pour poursuivre ses études, et Hao a couru après son ancien rêve. Nous nous sommes retrouvés et nous avons gardé le vrai nom de l'un et l'autre. Hao a pris son plus grand courage pour prendre la main de Jing dans la sienne, en poursuivant leur rêve. Chaque week-end ils s'étaient retrouvés à SJTU dans le labo, jouaient matlab, regardaient 'Mentalist' et 'Nikita', et Hao préparait l'examen de GEM.
+							L'année 2011. Jing est revenue à SJTU pour poursuivre ses études, et Hao a couru après son ancien rêve. Ils se étaient retrouvés et ils ont gardé le vrai nom de l'un et l'autre. Hao a pris son plus grand courage pour prendre la main de Jing dans la sienne, en poursuivant leur rêve. Chaque week-end ils s'étaient retrouvés à SJTU dans le labo, jouaient matlab, regardaient 'Mentalist' et 'Nikita', et Hao préparait l'examen de GEM.
 						</p>
 						<p class="langZH">
-							2011年，Jing回到了交大，Hao也回到了交大。Jing继续她的学业，Hao去寻找他曾经的梦想。我们再一次认识对方，拥有了彼此真正的名字。我鼓起勇气，拉起你的手，一起踏上追梦的路程。每个周末陪着你玩Matlab，看美剧，吃食堂，准备GEM考试。
+							2011年，Jing回到了交大，Hao也回到了交大。Jing继续她的学业，Hao去寻找他曾经的梦想。 
 						</p>
+						
+						<p class="langZH">"我们再一次认识对方，拥有了彼此真正的名字。我鼓起勇气，拉起你的手，一起踏上追梦的路程。每个周末陪着你玩Matlab，看美剧，吃食堂，准备GEM考试。" -- Hao
+						</p>
+						
 						
 					</div>
 				</div>
@@ -350,10 +354,10 @@ $( document ).ready(function() {
 					</div>
 					<div class="col-md-6">
 						<p class="langFR">
-							Octobre 2012, après tous les revers sinueux que Hao a l'habitude, nous avons réussi de se rencontrer à Paris! Nous avons decouvert les petits et les grands rues partout en Europe.
+							Octobre 2012, après tous les revers sinueux que Hao a l'habitude, ils ont réussi de se rencontrer à Paris! Ils ont decouvert les petits et les grands rues partout en Europe.
 						</p>
 						<p class="langZH">
-							2012年10月，经历过无数让我习以为常的波折后，我们成功在巴黎会师啦。我们一起行走欧洲，温暖的气氛在周围荡漾。
+							2012年10月 <br> "经历过无数让我习以为常的波折后，我们成功在巴黎会师啦! 我们一起行走欧洲，温暖的气氛在周围荡漾。" --Hao
 						</p>
 					</div>
 				</div>
@@ -392,7 +396,7 @@ $( document ).ready(function() {
 					<p class="langFR">
 					</p>
 					<p class="langZH">
-						在一个阳光明媚的午后，Hao求婚了。波光粼粼的湖上，我们相视冁然而笑。
+						在一个阳光明媚的午后，Hao求婚了。波光粼粼的湖上，两人相视冁然而笑。
 					</p>
 				</div>
 			</div>
@@ -401,12 +405,12 @@ $( document ).ready(function() {
 			<div class="row">
 			
 				<div class="col-md-6 col-md-offset-1">
-					<p class="langFR">
+					<h5 class="langFR">
 						Bientôt, dans cette petite ville charmante, Zhang Hao et Guo Jing vont entrer dans leur vie de couple en mariage.
-					</p>
-					<h6 class="langZH">
+					</h5>
+					<h5 class="langZH">
 						马上，在这座安静而美丽的小城，我们将牵手进入婚姻殿堂。					
-					</h6>
+					</h5>
 				</div>
 			</div>
 		</div>
@@ -527,9 +531,9 @@ $( document ).ready(function() {
 	</div>
 </div>
 <div class="navbar navbar-fixed-bottom col-md-4 col-md-offset-8">
-	<h5>Designed by Zhanguo</h5>
-	<h5>Powered by node.js, mongoDB, Openshift, Bootstrap</h5>
-	<h5>Copyright © 2015 Zhanguo</h5> 
+	<h4>Designed by Zhanguo</h4>
+	<h4>Powered by node.js, mongoDB, Openshift, Bootstrap</h4>
+	<h4>Copyright © 2015 Zhanguo</h4> 
 </div>
 
 <audio autoplay="true" loop="true">
