--- a/public/stylesheets/mariage.css
+++ b/public/stylesheets/mariage.css
@@ -25,19 +25,24 @@ h3{
 	color:white;
 }
 h4{
-	font-size: 1.5em;
-	text-align:justify;
-	color:#EE7621;
-}
-h5{
 	color: #CEF6F5;
 	text-align:right;
 	font-size: 1em;
+	
+}
+h5{
+	font-size: 1.5em;
+	text-align:justify;
+	color:#EE7621;
+	
+
 }
 h6{
 	color: #DF0101;
 	text-align:justify;
 	font-size: 2.5em;
+	text-shadow: 1px 3px 10px white;
+	
 }
 
 
@@ -45,6 +50,8 @@ p{
 	color: #EE7621;
 	text-align:justify;
 	font-size: 1.5em;
+	text-shadow: 1px 3px 10px white;
+	
 }
 th{
 	color: #EE7621;
