--- a/views/index.ejs
+++ b/views/index.ejs
@@ -274,10 +274,10 @@ $( document ).ready(function() {
 				
 					<div class="col-md-6">
 						<p class="langFR">
-							Nous sommes entrés dans la même université en 2005. Là, derrière le grand portail à la forme 'Tong' de l'Université Jiao Tong de Shanghai de campus Minhang, Hao est remarqué Jing. Comme toujours Hao assit au fond de la salle avec ses copains, bâillait, et alors que Jing était toujours près de l'estrade (nb par Jing: "c'est pas tout vrai").
+							Nous sommes entrés dans la même université en 2005. Là, derrière le grand portail à la forme 'Tong' de l'Université Jiao Tong de Shanghai de campus Minhang, Hao est remarqué Jing. Comme toujours Hao assit au fond de la salle avec ses copains, bâillait, et alors que Jing était toujours près de l'estrade.
 						</p>
 						<p class="langZH">
-							2005年，我们一起踏入交大的校门，记忆中是那个大大的拖鞋还有那只展翅欲飞的雄鹰，还有那走不完的闵大荒。跟小伙伴们一起坐在最后一排打瞌睡的张同学，认识了永远坐在第一排的郭同学（后注：这不是真的哇！）。我们都记得你的名字：学霸。你们也记得我们的名字：技术宅男。
+							2005年，我们一起踏入交大的校门，记忆中是那个大大的拖鞋还有那只展翅欲飞的雄鹰，还有那走不完的闵大荒。跟小伙伴们一起坐在最后一排打瞌睡的张同学，认识了永远坐在第一排的郭同学。我们都记得你的名字：学霸。你们也记得我们的名字：技术宅男。
 						</p>
 						
 					</div>
