modification of invitation image

--- a/public/stylesheets/invitation.css
+++ b/public/stylesheets/invitation.css
@@ -2,7 +2,7 @@
 
 body{
     overflow:hidden;
-	background-image: url(bg_sm.jpg);
+	background-image: url(texure_blue.jpg);
 }
 h1{
 	font-size: 2.2em;
@@ -220,17 +220,14 @@ p{
 
 
 .blueball {
-    -moz-box-shadow: 0 0 0 3px #d6385b, 2px 1px 4px 4px rgba(10,10,0,.5);
-    -webkit-box-shadow: 0 0 0 3px #d6385b, 2px 1px 4px 4px rgba(10,10,0,.5);
-    -o-box-shadow: 0 0 0 3px #d6385b, 2px 1px 4px 4px rgba(10,10,0,.5);
-    box-shadow: 0 0 0 3px #d6385b, 2px 1px 6px 4px rgba(10,10,0,.5);
+	-moz-box-shadow: 0 0 0 3px #65b37a, 2px 1px 4px 4px rgba(10,10,0,.5);
+    -webkit-box-shadow: 0 0 0 3px #65b37a, 2px 1px 4px 4px rgba(10,10,0,.5);
+    box-shadow: 0 0 0 3px #65b37a, 2px 1px 6px 4px rgba(10,10,0,.5);
 
-    background-image: -webkit-linear-gradient(35deg, #9f2e86 25%, transparent 25%, transparent 75%, #9f2e86 75%, #9f2e86), 
-    -webkit-linear-gradient(-35deg, #9f2e86 25%, transparent 25%, transparent 75%, #9f2e86 75%, #9f2e86);
-    background-image: -moz-linear-gradient(35deg, #9f2e86 25%, transparent 25%, transparent 75%, #9f2e86 75%, #9f2e86), 
-    -moz-linear-gradient(-35deg, #9f2e86 25%, transparent 25%, transparent 75%, #9f2e86 75%, #9f2e86);
-    background-size:20px 20px;  
-    background-color: #d6385b;
+    background-size: 20px 20px; 
+    background-color: #104E8B;
+    background-size:30px 30px;
+    background-position: 0 0, 20px 20px;
 }
 
 .menuText {
