--- a/views/invitation.ejs
+++ b/views/invitation.ejs
@@ -47,7 +47,7 @@
 <body>
 	<div class="flipbook">
 		<div id="invitation">
-			<div id="cover1" class="hard" style="background-image:url(cover1.jpg); background-size:100% 100%"></div>
+			<div id="cover1" class="hard" style="background-image:url(cover_85.jpg); background-size:100% 100%"></div>
 			<div id="page1">
 				<div class="container-fluid">
 					<div class="row">
@@ -129,7 +129,7 @@
 					</div>
 				</div>
 			</div>
-			<div id="cover2" class="hard" style="background-image:url(cover2.jpg); background-size:100% 100%"></div>
+			<div id="cover2" class="hard" style="background-image:url(back_85.png); background-size:100% 100%"></div>
 		</div>
 	</div>
 </body>
