--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -71,7 +71,7 @@
 									<td><input type="button" onclick="updateInvitee(<%= i %>)" value="Modify"></td>
 									<td><input type="button" onclick="location.href ='/removeInvitee?id=<%= invitees[i]._id%>'" value="Delete"></td>
 									<td><input type="button" onclick="location.href ='/downloadQR?id=<%= invitees[i]._id%>'" value="DownloadQRcode"></td>
-									<td>http://mariage-caesarhao.rhcloud.com/invitation?id=<%= invitees[i]._id %></td>
+									<td>https://mariage-caesarhao.rhcloud.com/invitation?id=<%= invitees[i]._id %></td>
 								</tr>
 							<% } %>
 						</tbody>
