--- a/views/index.ejs
+++ b/views/index.ejs
@@ -541,7 +541,7 @@
 </div>
 
 <audio autoplay="true" loop="true">
-	<source src="SunnySideUp+.mp3" type="audio/mpeg">
+	<source src="music.mp3" type="audio/mpeg">
 </audio>
 </body>
 </html>
