price interval 30 euros

--- a/public/stylesheets/mariage.css
+++ b/public/stylesheets/mariage.css
@@ -260,7 +260,7 @@ line-height: 1em;
 vertical-align: top;
 }
 ul.countdown li p {
-color: #a7abb1;
-font-size: 1em;
+color: white;
+font-size: 2em;
 }
 
