--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
 	<script type="text/javascript" src="bootstrap.min.js"></script>
 	<script type="text/javascript" src="jquery.fullPage.min.js"></script>
 	<script type="text/javascript" src="jquery.downCount.js"></script>
-	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js"></script>
+	<!-- <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js"></script> -->
 	
 	<script type="text/javascript">
 		$(document).ready(function() {
@@ -194,38 +194,30 @@
 					<ul class="countdown">
 						<li>
 							<span style="font-family:LCD2U" class="days">00</span>
-							<p class="days_ref">
-								<div class="langFR">jours</div>
-								<div class="langZH">天</div>
-								<div class="langEN">days</div>
-							</p>
+							<p class="days_ref langFR">jours</p>
+							<p class="days_ref langZH">天</p>
+							<p class="days_ref langEN">days</p>
 						</li>
 						<li style="font-family:LCD2U" class="seperator">.</li>
 						<li>
 							<span style="font-family:LCD2U" class="hours">00</span>
-							<p class="hours_ref">
-								<div class="langFR">heures</div>
-								<div class="langZH">小时</div>
-								<div class="langEN">hours</div>
-							</p>
+							<p class="hours_ref langFR">heures</p>
+							<p class="hours_ref langZH">小时</p>
+							<p class="hours_ref langEN">hours</p>
 						</li>
 						<li style="font-family:LCD2U" class="seperator">:</li>
 						<li>
 							<span style="font-family:LCD2U" class="minutes">00</span>
-							<p class="minutes_ref">
-								<div class="langFR">minutes</div>
-								<div class="langZH">分钟</div>
-								<div class="langEN">minutes</div>
-							</p>
+							<p class="minutes_ref langFR">minutes</p>
+							<p class="minutes_ref langZH">分钟</p>
+							<p class="minutes_ref langEN">minutes</p>
 						</li>
 						<li style="font-family:LCD2U" class="seperator">:</li>
 						<li>
 							<span style="font-family:LCD2U" class="seconds">00</span>
-							<p class="seconds_ref">
-								<div class="langFR">secondes</div>
-								<div class="langZH">秒</div>
-								<div class="langEN">seconds</div>
-							</p>
+							<p class="seconds_ref langFR">secondes</p>
+							<p class="seconds_ref langZH">秒</p>
+							<p class="seconds_ref langEN">seconds</p>
 						</li>
 					</ul>
 				</div>
@@ -541,7 +533,7 @@
 </div>
 
 <audio autoplay="true" loop="true">
-	<source src="music.mp3" type="audio/mpeg">
+	<source src="SunnySideUp+.mp3" type="audio/mpeg">
 </audio>
 </body>
 </html>
