--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -32,7 +32,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<h2>Current invitees: <%= invitees.length %> </h2>
+					<h2>Current invitees: <%= StatisticInfo.NumInvitees %> include <%= StatisticInfo.NumAttendDinner %> (<%= StatisticInfo.NumAttendDinnerCouples %> couples) attend Dinner and <%= StatisticInfo.NumAttendBarbcue %> (<%= StatisticInfo.NumAttendBarbcueCouples %> couples) attend Barbecue.</h2>
 					<!--DONE: a list of the current invitees, support delete, download QRcode -->
 					<table class="table table-striped table-bordered">
 						<thead>
