--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -32,6 +32,16 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
+					<h2>Configuration</h2>
+					<form class="form-inline" method="post" action="/setPriceInterval">
+						<div class="form-group">
+							<label for="priceinterval">PriceInterval</label>
+							<input type="number" id="priceinterval" class="form-control" name="priceinterval" min='0' step='0.01' value=<%= PriceInterval %> required>
+						</div>
+						<input type="submit" value="Modify">
+					</form>
+				</div>
+				<div class="col-md-12">
 					<h2>Current invitees: <%= StatisticInfo.NumInvitees %> include <%= StatisticInfo.NumAttendDinner %> (<%= StatisticInfo.NumAttendDinnerCouples %> couples) attend Dinner and <%= StatisticInfo.NumAttendBarbcue %> (<%= StatisticInfo.NumAttendBarbcueCouples %> couples) attend Barbecue.</h2>
 					<!--DONE: a list of the current invitees, support delete, download QRcode -->
 					<table class="table table-striped table-bordered">
